# docs/swagger.json
@@ -1817,8 +1817,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "Filter by user ID",
-                        "name": "user_id",
+                        "description": "Filter by employee ID",
+                        "name": "employee_id",
                         "in": "query"
                     },
                     {
